# NeuronalesNetz

./: neuro.py  neuro2.py  neuro2layers.py  pyproject.toml  setup.py
neuro/: __init__.py  neuro.py  neuro_cy.pyx
neuro/feedforward/: __init__.py  neuro.py
neuro/gru/: gru.py
neuro/pytorch/: rnn.py  test.py
